renamed protected page to profile page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,4 +3,4 @@
 <a href="/auth/signup">Signup</a>
 <a href="/auth/login">Login</a>
 <a href="/auth/logout">Logout</a>
-<a href="/protected">Protected Page</a>
+<a href="/profile">Profile</a>
