added login btn

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,3 +11,7 @@
 
   <input class="btn btn-primary" type="submit">
 </form>
+
+<a href="/auth/facebook" class="btn btn-primary">
+  Login with Facebook
+</a>
