doin some weed wacking

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,13 +1,9 @@
 <form action="/auth/login" method="POST">
-  <div class="form-group">
-    <label for="authEmail">Email</label>
-    <input id="authEmail" class="form-control" type="email" name="email">
-  </div>
+  <label for="auth-email">Email</label>
+  <input id="auth-email" type="email" name="email">
 
-  <div class="form-group">
-    <label for="authPassword">Password</label>
-    <input id="authPassword" class="form-control" type="password" name="password">
-  </div>
+  <label for="auth-password">Password</label>
+  <input id="auth-password" type="password" name="password">
 
-  <input class="btn btn-primary" type="submit">
+  <input type="submit" value="Log In">
 </form>
