--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,1 @@
-<h2>Home</h2>
-
-<a href="/auth/signup">Signup</a>
-<a href="/auth/login">Login</a>
-<a href="/auth/logout">Logout</a>
-<a href="/profile">Profile</a>
+<h2>Homepage</h2>
