--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,18 +1,12 @@
 <form action="/auth/signup" method="POST">
-  <div class="form-group">
-    <label for="authEmail">Email</label>
-    <input id="authEmail" class="form-control" type="email" name="email">
-  </div>
+  <label for="new-email">Email</label>
+  <input id="new-email" type="email" name="email">
 
-  <div class="form-group">
-    <label for="authName">Name</label>
-    <input id="authName" class="form-control" type="text" name="name">
-  </div>
+  <label for="new-name">Name</label>
+  <input id="new-name" type="text" name="name">
 
-  <div class="form-group">
-    <label for="authPassword">Password</label>
-    <input id="authPassword" class="form-control" type="password" name="password">
-  </div>
+  <label for="new-password">Password</label>
+  <input id="new-password" type="password" name="password">
 
-  <input class="btn btn-primary" type="submit">
+  <input type="submit" value="Sign up">
 </form>
