Basic notes auth done

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+* {
+  padding: 0;
+}
+
 nav ul li {
   text-decoration: none;
   display: inline-block;
@@ -6,4 +10,24 @@ nav ul li {
 
 h1 {
   color: chartreuse;
+}
+
+.alert {
+  border: 2px solid black;
+  box-shadow: #00000085 .2em .2em;
+  margin: 1em auto;
+  width: 25%;
+  padding: 1em;
+  text-align: center;
+  border-radius: .2em;
+}
+
+.alert-error {
+  background-color: #8f0101e7;
+  color: #FFF;
+}
+
+.alert-success {
+  background-color: #018f01e7;
+  color: #FFF;
 }
