ugly messages but they show

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,7 @@
       </nav>
     </header>
     <h1>Authentication</h1>
+    <%- include('./partials/alerts.ejs') %>
     <%- body %>
   </body>
 </html>
